# docs/swagger/swagger.yaml
@@ -1,5 +1,20 @@
 basePath: /api/v2
 definitions:
+  auth.AuthProviderInfo:
+    properties:
+      icon:
+        type: string
+      label:
+        type: string
+      name:
+        type: string
+      path:
+        type: string
+    required:
+    - icon
+    - label
+    - name
+    type: object
   common.ApiVersionData:
     properties:
       app:
@@ -562,6 +577,48 @@ definitions:
         description: The username
         type: string
     type: object
+  handler.RequestAuthDataMergeApply:
+    properties:
+      user_name:
+        type: string
+    required:
+    - user_name
+    type: object
+  handler.RequestAuthEmailLogin:
+    properties:
+      code:
+        type: string
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    type: object
+  handler.RequestAuthEmailRegister:
+    properties:
+      code:
+        type: string
+      email:
+        type: string
+      link:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+    required:
+    - code
+    - email
+    - password
+    type: object
+  handler.RequestAuthEmailSend:
+    properties:
+      email:
+        type: string
+    required:
+    - email
+    type: object
   handler.ResponseAdminUserList:
     properties:
       count:
@@ -573,6 +630,38 @@ definitions:
     required:
     - count
     - users
+    type: object
+  handler.ResponseAuthDataMergeApply:
+    properties:
+      deleted_user_count:
+        type: integer
+      update_comments_count:
+        type: integer
+      update_notifies_count:
+        type: integer
+      update_votes_count:
+        type: integer
+      user_token:
+        description: Empty if login user is target user no need to re-login
+        type: string
+    required:
+    - deleted_user_count
+    - update_comments_count
+    - update_notifies_count
+    - update_votes_count
+    - user_token
+    type: object
+  handler.ResponseAuthDataMergeCheck:
+    properties:
+      need_merge:
+        type: boolean
+      user_names:
+        items:
+          type: string
+        type: array
+    required:
+    - need_merge
+    - user_names
     type: object
   handler.ResponseCaptchaGet:
     properties:
@@ -771,6 +860,18 @@ definitions:
     - visible
     - vote_down
     - vote_up
+    type: object
+  handler.ResponseConfAuthProviders:
+    properties:
+      anonymous:
+        type: boolean
+      providers:
+        items:
+          $ref: '#/definitions/auth.AuthProviderInfo'
+        type: array
+    required:
+    - anonymous
+    - providers
     type: object
   handler.ResponseConfDomain:
     properties:
@@ -1134,6 +1235,215 @@ info:
   title: Artalk API
   version: "2.0"
 paths:
+  /auth/email/login:
+    post:
+      consumes:
+      - application/json
+      description: Login by email with verify code (Need send email verify code first)
+        or password
+      operationId: LoginByEmail
+      parameters:
+      - description: The data to login
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/handler.RequestAuthEmailLogin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.ResponseUserLogin'
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      summary: Login by email
+      tags:
+      - Auth
+  /auth/email/register:
+    post:
+      consumes:
+      - application/json
+      description: Register by email and verify code (if user exists, will update
+        user, like forget password. Need send email verify code first)
+      operationId: RegisterByEmail
+      parameters:
+      - description: The data to register
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/handler.RequestAuthEmailRegister'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.ResponseUserLogin'
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      summary: Register by email
+      tags:
+      - Auth
+  /auth/email/send:
+    post:
+      consumes:
+      - application/json
+      description: Send email including verify code to user
+      operationId: SendVerifyEmail
+      parameters:
+      - description: The data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/handler.RequestAuthEmailSend'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      summary: Send verify email
+      tags:
+      - Auth
+  /auth/merge:
+    get:
+      description: Get all users with same email, if there are more than one user
+        with same email, need merge
+      operationId: CheckDataMerge
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.ResponseAuthDataMergeCheck'
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Check data merge
+      tags:
+      - Auth
+    post:
+      consumes:
+      - application/json
+      description: This function is to solve the problem of multiple users with the
+        same email address, should be called after user login and then check, and
+        perform data merge.
+      operationId: ApplyDataMerge
+      parameters:
+      - description: The data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/handler.RequestAuthDataMergeApply'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.ResponseAuthDataMergeApply'
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Apply data merge
+      tags:
+      - Auth
   /cache/flush:
     post:
       description: Flush all cache on the server
@@ -1578,6 +1888,29 @@ paths:
           schema:
             $ref: '#/definitions/common.ConfData'
       summary: Get System Configs
+      tags:
+      - System
+  /conf/auth/providers:
+    get:
+      description: Get social login providers
+      operationId: GetSocialLoginProviders
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.ResponseConfAuthProviders'
+        "404":
+          description: Not Found
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.Map'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      summary: Get Social Login Providers
       tags:
       - System
   /conf/domain:
